--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "Paint text different colors",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"author": "KraXen72 and Chetachi Ezikeuzor",
+	"authorUrl": "https://github.com/KraXen72",
+	"fundingUrl": "https://ko-fi.com/kraxen72",
 	"isDesktopOnly": false
 }
